[B]0.7.0[/B]


[B]0.6.0[/B]
- 5 day weather screen added (press down on homescreen). Layout not finalised.
- New skin option: Set and use a custom global background
- Various skin-wide tweaks and fixes
- Music addons and file lists reworked. Should now work properly!
- Dialog 'DialogPVRTimerSettings.xml' added.
- Dialog 'DialogPVRChannelManager.xml' added.
- PVR Timer view implemented (first pass - not fully tested)
- Music player pause issue fixed (thanks lonjemoco!)

[B]0.5.0[/B]
- Photo library: basic / limited functionality implemented. Accessed from homescreen.
- Improvements to file browser and select dialogs (particularly for artwork selection and download)
- Bug fix: Music addons. Some problems with activating music addons from shortcuts persist.
- Various skin-wide tweaks and fixes

[B]0.1.4[/B]
- Dialog added: DialogNetworkSetup.xml
- Reworked: Music Now playing (musicvisualisation.xml) 
- UI Controls: Visual modification to spin controls and radio buttons for better visibility
- Misc animation adjustments
- Addition of indicator on homescreen for access to system info screen
- Some file browsing dialogs converted to multicolumn panels 
- General misc tidy up and bug fixes skin-wide

[B]0.1.3[/B]
- Addon info dialog reworked
- DialogTextviewer.xml added
- Playlist dialogs added
- System info screen added (press UP on homescreen for now, location may change in future work)
- PVR dialogs for recording info and guide info added
- General misc tidy up and bug fixes skin-wide
- Symbol font updated to latest version (as @ 20/09/13)

[B]0.1.2[/B]
- General misc tidy up skin-wide
- .DS Store entries removed from GIT repository
- Dialog restyling and new UI controls added
- Video info screen reworked
- Misc bug fixes

[B]0.1.1[/B]
- Now playing info now available directly from OK button
- Movie listing tweak (now shows year and resolution)
- Video addon listing layout adjustment
- Exit, suspend, hibernate options added to shutdown menu