@@ -14,7 +14,10 @@
 			<posx>col-1-begin</posx>
 			<posy>row-13-begin</posy>
 			
-			<animation effect="slide" start="0,200" delay="1000" tween="sine" time="300">WindowOpen</animation>
+			<animation type="Windowopen">
+	            <effect type="fade" start="0" end="100" time="300" delay="1000" />
+				<effect type="slide" start="0,200" end="0" tween="sine" easing="out" time="400" delay="1000" />
+			</animation>
 
 			<control type="label">
 				<posx>0</posx>
@@ -49,6 +52,7 @@
 			
 			<!--system info indicator-->
 			<control type="label">
+				<animation effect="fade" start="0" end="100" delay="600" tween="sine" time="500">WindowOpen</animation>
 				<posx>0</posx>
 				<posy>252</posy>
 				<width>24-col</width>
