@@ -1,5 +1,5 @@
 <window id="501">
-	<defaultcontrol always="true">9000</defaultcontrol>
+	<defaultcontrol always="false">9000</defaultcontrol>
 	<allowoverlay>yes</allowoverlay>
 	<onunload>Skin.SetString(showRecentMusicItems,true)</onunload>
 
@@ -344,6 +344,8 @@
 
 				<!--Sort / misc labels (footer)-->
 				<control type="group">
+					<visible>SubString(skin.string(showRecentMusicItems),false)</visible>
+					
 					<posx>col-4-begin</posx>
 					<posy>row-18-begin</posy>
 					
