@@ -1,5 +1,5 @@
 <window id="2">
-	<defaultcontrol always="true">9000</defaultcontrol>
+	<defaultcontrol always="false">9000</defaultcontrol>
 	<allowoverlay>yes</allowoverlay>
 	<onload>PlayerControl(stop)</onload>
 
