@@ -1,0 +1,5 @@
+<window>	
+    <controls>
+    	<!-- Removed: redundant -->
+    </controls>
+</window>
