@@ -1,14 +1,55 @@
-<window id="2003">
-	<defaultcontrol always="true">8000</defaultcontrol>
-	<allowoverlay>yes</allowoverlay>
-	<include>fadeInOut</include>
-	
-	<controls>
+<window>
+	<defaultcontrol>-</defaultcontrol>
 		
+	<controls>
+			
+		<!--hidden container control-->
+		<control type="list" id="100">
+			<posx>-10</posx>
+			<posy>-10</posy>
+			<width>1</width>
+			<height>1</height>
+			<visible>false</visible>
+			<itemlayout width="1" height="1"/>
+			<focusedlayout width="1" height="1"/>
+		</control>
+		
+		<control type="group" id="101">
+			<visible>false</visible>
+			<control type="list" id="110"></control><!--movies-->
+			<control type="list" id="120"></control><!--tvshows-->
+			<control type="list" id="130"></control><!--seasons-->
+			<control type="list" id="140"></control><!--episodes-->
+			<control type="list" id="150"></control><!--music videos-->
+			<control type="list" id="160"></control><!--artists-->
+			<control type="list" id="170"></control><!--albums-->
+			<control type="list" id="180"></control><!--songs-->
+		</control>
+		
+		<!--hidden ok cancel controls-->
 		<control type="group">
-			<!--background / fanart-->
+			<visible>false</visible>
+		
+			<control type="button" id="191">
+				<description>OK</description>
+				<label>$LOCALIZE[186]</label>
+			</control>
+			
+			<control type="button" id="192">
+				<description>Play</description>
+				<label>-</label>
+			</control>
+			
+			<control type="button" id="193">
+				<description>trailer</description>
+				<label>-</label>
+			</control>
+		</control>
+		
+		<!--background / fanart-->
+		<control type="group">
+			
 			<control type="image">
-				<visible>!Substring(Container.folderpath,plugin) + !container.content(episodes)</visible>
 				<posx>0</posx>
 				<posy>0</posy>
 				<include>dimensionsFullscreen</include>
@@ -16,26 +57,26 @@
 				<colordiffuse>ffffffff</colordiffuse>
 				<aspectratio>stretch</aspectratio>
 			</control>
-		
+			
 			<control type="image">
-				<visible>Substring(Container.folderpath,plugin) | container.content(episodes)</visible>
+				<posx>0</posx>
+				<posy>0</posy>
+				<include>dimensionsFullscreen</include>
+				<texture>$INFO[Container(100).ListItem.Property(fanart)]</texture>
+				<colordiffuse>ffffffff</colordiffuse>
+				<aspectratio>stretch</aspectratio>
+				<include>kenBurnsey</include>
+			</control>
+			
+			<!--extra darkness for tvepisodes that have fanart-->
+			<control type="image">
+				<visible>control.isvisible(140)</visible>
 				<posx>0</posx>
 				<posy>0</posy>
 				<include>dimensionsFullscreen</include>
 				<texture>colors/black.png</texture>
-				<colordiffuse>ddffffff</colordiffuse>
+				<colordiffuse>ccffffff</colordiffuse>
 				<aspectratio>stretch</aspectratio>
-			</control>		
-			
-			<control type="image">
-				<visible>!Substring(Container.folderpath,plugin) + !container.content(episodes)</visible>
-				<posx>0</posx>
-				<posy>0</posy>
-				<include>dimensionsFullscreen</include>
-				<texture>$INFO[listitem.art(fanart)]</texture>
-				<colordiffuse>ffffffff</colordiffuse>
-				<aspectratio>stretch</aspectratio>
-				<include>kenBurnsey</include>
 			</control>
 		
 			<control type="image">
@@ -45,10 +86,10 @@
 				<aspectratio>stretch</aspectratio>
 			</control>	
 		</control>
-										
-		<!--content is movie or tvshow (from XBMC Library)-->
+		
+		<!--content is movie or tvshow-->
 		<control type="group">
-			<visible>!Substring(Container.folderpath,plugin) + !container.content(episodes)</visible>
+			<visible>Control.IsVisible(110) | control.IsVisible(120)</visible>
 			
 			<!--overlay-->
 			<control type="image">
@@ -73,7 +114,7 @@
 					<width>6-col</width>
 					<height>635</height>
 					<aspectratio scalediffuse="false">scale</aspectratio>
-					<texture background="true" fallback="colors/black.png" border="0">$INFO[Listitem.art(poster)]</texture>
+					<texture background="true" fallback="colors/black.png" border="0">$INFO[Container(100).ListItem.Icon]</texture>
 					<fadetime>200</fadetime>
 				</control>
 
@@ -91,7 +132,7 @@
 					<align>left</align>
 					<font>dialogTitle</font>
 					<textcolor>white</textcolor>
-					<label>$INFO[ListItem.label]</label>
+					<label>$INFO[Container(100).ListItem.Label]</label>
 				</control>
 			
 				<control type="label">
@@ -101,7 +142,7 @@
 					<align>left</align>
 					<font>itemTitleSmall</font>
 					<textcolor>white</textcolor>
-					<label>[B]$INFO[ListItem.year,,]$INFO[listitem.director, • Dir. ,]$INFO[listitem.genre, • ,][/B]</label>
+					<label>[B]$INFO[Container(100).ListItem.property(year),,]$INFO[Container(100).listitem.property(director), • Dir. ,]$INFO[Container(100).listitem.property(genre), • ,][/B]</label>
 				</control>
 						
 				<!--synopsis-->			
@@ -113,14 +154,14 @@
 					<align>left</align>
 					<textcolor>white</textcolor>
 					<height>174</height>
-					<label>[B]$INFO[ListItem.plot][/B]</label>
+					<label>[B]$INFO[Container(100).ListItem.property(plot)][/B]</label>
 					<autoscroll delay="10000" time="1000" repeat="10000"></autoscroll>
 				</control>
 			
 			</control>
 			
 			<!--dialog controls-->						
-			<control type="list" id="8000">
+			<control type="panel" id="191">
 				<posx>col-20-begin</posx>
 				<posy>row-8-begin</posy>
 				<width>8-col</width>
@@ -196,29 +237,16 @@
 
 				<content>
 					<item id="1">
-						<visible>!IsEmpty(ListItem.Trailer)</visible>
-						<label>20410</label>
-						<label2></label2>
-						<thumb>-</thumb>
-						<onclick>SendClick(2003,11)</onclick>
-					</item>
-					<item id="2">
-						<label>31075</label>
+						<label>$INFO[control.getlabel(192)]</label>
 						<label2></label2>
 						<thumb>-</thumb>
-						<onclick>sendclick(2003,8)</onclick>
+						<onclick>sendclick(192)</onclick>
 					</item>
-					<item id="3">
-						<label>31076</label>
+					<item id="2">
+						<label>$INFO[control.getlabel(193)]</label>
 						<label2></label2>
 						<thumb>-</thumb>
-						<onclick>SendClick(2003,6)</onclick>
-					</item>
-					<item id="4">
-						<label>31077</label>
-						<label2></label2>
-						<thumb>-</thumb>
-						<onclick>SendClick(2003,10)</onclick>
+						<onclick>SendClick(193)</onclick>
 					</item>
 				</content>
 
@@ -226,12 +254,13 @@
 							
 		</control>
 		
-		<!--content is tvshow episode or content is from a plugin-->
+		<!--content is tvshow episode-->
 		<control type="group">
-			<visible>Substring(Container.folderpath,plugin) | container.content(episodes)</visible>
+			<visible>control.IsVisible(140)</visible>
 			
 			<include>modalDialogInOutVertical</include>
 						
+			
 			<!--thumbnail if available-->
 			<control type="group">
 				<posx>col-7-begin</posx>
@@ -244,7 +273,7 @@
 					<width>12-col</width>
 					<height>486</height>
 					<aspectratio scalediffuse="false">scale</aspectratio>
-					<texture background="true" fallback="colors/black.png" border="0">$INFO[Listitem.thumb]</texture>
+					<texture background="true" fallback="colors/black.png" border="0">$INFO[container(100).Listitem.thumb]</texture>
 					<fadetime>200</fadetime>
 				</control>
 
@@ -263,10 +292,10 @@
 					<align>left</align>
 					<font>regularStrong</font>
 					<textcolor>white</textcolor>
-					<label>$INFO[listitem.tvshowtitle,, • ]$INFO[listitem.season,Season , • ]$INFO[ListItem.label]</label>
+					<label>$INFO[container(100).ListItem.label]</label>
 				</control>
 								
-				<!--synopsis-->			
+				<!--synopsis-->	
 				<control type="textbox">
 					<posx>0</posx>
 					<posy>68</posy>
@@ -275,12 +304,12 @@
 					<align>left</align>
 					<textcolor>white</textcolor>
 					<height>206</height>
-					<label>[B]$INFO[ListItem.plot][/B]</label>
+					<label>[B]$INFO[container(100).ListItem.property(plot)][/B]</label>
 					<autoscroll delay="10000" time="1000" repeat="10000"></autoscroll>
 				</control>
-				
+						
 				<!--dialog controls-->						
-				<control type="list" id="8000">
+				<control type="list" id="191">
 					<posx>0</posx>
 					<posy>330</posy>
 					<width>12-col</width>
@@ -312,7 +341,7 @@
 						<control type="label">
 							<posx>1-col</posx>
 							<posy>2</posy>
-							<width>6-col</width>
+							<width>5-col</width>
 							<font>menuTitle</font>
 							<textcolor>white</textcolor>
 							<label>$INFO[ListItem.label]</label>
@@ -345,7 +374,7 @@
 						<control type="label">
 							<posx>1-col</posx>
 							<posy>2</posy>
-							<width>6-col</width>
+							<width>5-col</width>
 							<font>menuTitle</font>
 							<textcolor>black</textcolor>
 							<label>$INFO[ListItem.label]</label>
@@ -359,14 +388,7 @@
 							<label>31075</label>
 							<label2></label2>
 							<thumb>-</thumb>
-							<onclick>sendclick(2003,8)</onclick>
-						</item>
-						<item id="2">
-							<visible>!Substring(Container.folderpath,plugin)</visible>
-							<label>31076</label>
-							<label2></label2>
-							<thumb>-</thumb>
-							<onclick>SendClick(2003,6)</onclick>
+							<onclick>sendclick(192)</onclick>
 						</item>
 					</content>
 
@@ -375,35 +397,6 @@
 			</control>
 			
 		</control>
-			
-		<!--buttons-->
-		<control type="group">
-			<visible>false</visible>
-			
-			<control type="button" id="8">
-				<description>Play</description>
-			</control>
-			
-			<control type="button" id="6">
-				<description>Refresh</description>
-			</control>
-
-			<control type="button" id="10">
-				<description>Choose Art</description>
-			</control>
-			
-			<control type="button" id="11">
-				<description>Trailer</description>
-			</control>
-		</control>											
-	
-		<!--debugging-->
-		<include>Debug_Grid</include>
-		<control type="label">
-			<include>DialogID</include>
-			<label>DialogVideoInfo.xml</label>
-		</control>
-
+				
 	</controls>
-
 </window>
